--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
           plugin_activity_limit: 4
           plugin_activity_load: 300
           plugin_activity_visibility: all
+          plugin_activity_skipped: Godson777
           plugin_anilist: yes
           plugin_anilist_limit: 2
           plugin_anilist_limit_characters: 22
