--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
           plugin_activity_load: 300
           plugin_activity_visibility: all
           plugin_anilist: yes
-          plugin_anilist_limit: 2
-          plugin_anilist_limit_characters: 22
+          plugin_anilist_limit: 4
+          plugin_anilist_limit_characters: 30
           plugin_anilist_medias: anime, manga
-          plugin_anilist_sections: favorites, watching, characters
+          plugin_anilist_sections: favorites, watching, reading, characters
           plugin_anilist_shuffle: yes
           plugin_anilist_user: GodsonTM
           plugin_followup: yes
